--- a/Projektarbete (Tech Store) (1)/Projektarbete (Tech Store)/index.html
+++ b/Projektarbete (Tech Store) (1)/Projektarbete (Tech Store)/index.html
@@ -10,10 +10,14 @@
         <!-- Visit www.fontawesome.com on how to add font icons to your project -->
         <!-- Link your stylesheet file/files, do NOT write styles in the html file! -->
         <script src="./main.js"></script>
+        <script src="https://kit.fontawesome.com/7a727e3fe8.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="./CSS/style.css">
     </head>
     <body onload="initSite()">
-        <header>
+        <header class="header">
             <!-- Your header title and shopping cart button goes here  -->
+            <h1 class="title">TechStore</h1>
+            <i class="fas fa-shopping-cart"></i>
         </header>
 
         <main>
