--- a/Projektarbete (Tech Store) (1)/Projektarbete (Tech Store)/index.html
+++ b/Projektarbete (Tech Store) (1)/Projektarbete (Tech Store)/index.html
@@ -9,7 +9,7 @@
         
         <!-- Visit www.fontawesome.com on how to add font icons to your project -->
         <!-- Link your stylesheet file/files, do NOT write styles in the html file! -->
-        <script src="./main.js"></script>
+        <script defer src="./main.js"></script>
         <script src="https://kit.fontawesome.com/7a727e3fe8.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="./CSS/style.css">
     </head>
