--- a/Projektarbete (Tech Store) (1)/Projektarbete (Tech Store)/index.html
+++ b/Projektarbete (Tech Store) (1)/Projektarbete (Tech Store)/index.html
@@ -17,7 +17,7 @@
         <header class="header">
             <!-- Your header title and shopping cart button goes here  -->
             <h1 class="title">TechStore</h1>
-            <i class="fas fa-shopping-cart"></i>
+            <a href="./cart.html" class="fas fa-shopping-cart"></a>
         </header>
 
         <main>
