--- a/Projektarbete (Tech Store) (1)/Projektarbete (Tech Store)/index.html
+++ b/Projektarbete (Tech Store) (1)/Projektarbete (Tech Store)/index.html
@@ -6,18 +6,21 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        
-        <!-- Visit www.fontawesome.com on how to add font icons to your project -->
-        <!-- Link your stylesheet file/files, do NOT write styles in the html file! -->
         <script defer src="./main.js"></script>
         <script src="https://kit.fontawesome.com/7a727e3fe8.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="./CSS/style.css">
+        <link rel="stylesheet" href="./CSS/header.css">
+        <link rel="stylesheet" href="./CSS/common.css">
     </head>
     <body onload="initSite()">
         <header class="header">
-            <!-- Your header title and shopping cart button goes here  -->
-            <h1 class="title">TechStore</h1>
-            <a href="./cart.html" class="fas fa-shopping-cart"></a>
+            <div>
+                <h1 class="title">TechStore</h1>
+            </div>
+            <div>
+                <span id="counter">0</span>
+                <a href="./cart.html" class="fas fa-shopping-cart"></a>
+            </div>
         </header>
 
         <main>
